force-app/main/default/objects/FEC_Batch_Log__c/FEC_Batch_Log__c.object-meta.xml
<CustomObject>
    <description>Lưu trữ nhật ký vận hành của các Batch Job trong hệ thống MDM.</description>
    <label>FEC Batch Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Batch Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FEC Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>