force-app/main/default/objects/FEC_Batch_Log__c/fields/FEC_Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Batch_Name__c</fullName>
    <label>Batch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>