force-app/main/default/objects/FEC_Batch_Log__c/fields/FEC_Error_Count__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Count__c</fullName>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>