force-app/main/default/objects/FEC_Batch_Log__c/fields/FEC_Error_Details__c.field-meta.xml
<CustomField>
    <fullName>FEC_Error_Details__c</fullName>
    <label>Error Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>