force-app/main/default/objects/FEC_Batch_Log__c/fields/FEC_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Job_ID__c</fullName>
    <label>Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>