force-app/main/default/objects/FEC_Batch_Log__c/fields/FEC_Mismatch_Detail__c.field-meta.xml
<CustomField>
    <fullName>FEC_Mismatch_Detail__c</fullName>
    <label>Mismatch Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>