force-app/main/default/objects/FEC_Batch_Log__c/fields/FEC_Processed_Items__c.field-meta.xml
<CustomField>
    <fullName>FEC_Processed_Items__c</fullName>
    <label>Processed Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>