force-app/main/default/objects/FEC_Batch_Log__c/fields/FEC_Total_Job_Items__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Job_Items__c</fullName>
    <label>Total Job Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>